--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
-    "@mui/material": "^5.14.14",
-    "@mui/styles": "^5.14.14",
+    "@mui/material": "^5.14.14",    
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
