--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "express": "^4.18.2", "mongodb": "^6.0.0",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",    
     "http-errors": "^2.0.0",
     "cors": "^2.8.5"
